--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.30</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
@@ -26,17 +31,12 @@
     <dependency>
       <groupId>com.sparkjava</groupId>
       <artifactId>spark-core</artifactId>
-      <version>2.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>2.6.4</version>
+      <version>[2.7.2,)</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.10.4</version>
+      <version>[2.9.10.4,)</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -78,8 +78,8 @@
     </dependency>
     <dependency>
       <groupId>com.sparkjava</groupId>
-      <artifactId>spark-template-freemarker</artifactId>
-      <version>2.3</version>
+      <artifactId>spark-core</artifactId>
+      <version>[2.7.2,)</version>
     </dependency>
     <dependency>
       <groupId>com.j2html</groupId>
