--- a/pom.xml
+++ b/pom.xml
@@ -1,158 +1,177 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com.christinewang</groupId>
-  <artifactId>voter-queue</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
-  <name>voter-queue</name>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-
-  <dependencies>
-    <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
-    <dependency>
-      <groupId>com.google.zxing</groupId>
-      <artifactId>core</artifactId>
-      <version>3.4.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
-    <dependency>
-      <groupId>com.google.zxing</groupId>
-      <artifactId>javase</artifactId>
-      <version>3.4.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.7.30</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.sparkjava</groupId>
-      <artifactId>spark-core</artifactId>
-      <version>[2.7.2,)</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>[2.9.10.4,)</version>
-    </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.2</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.sql2o</groupId>
-      <artifactId>sql2o</artifactId>
-      <version>1.5.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.4-1206-jdbc42</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>19.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.easymock</groupId>
-      <artifactId>easymock</artifactId>
-      <version>3.4</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.5</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.beust</groupId>
-      <artifactId>jcommander</artifactId>
-      <version>1.48</version>
-    </dependency>
-    <dependency>
-      <groupId>com.sparkjava</groupId>
-      <artifactId>spark-core</artifactId>
-      <version>[2.7.2,)</version>
-    </dependency>
-    <dependency>
-      <groupId>com.j2html</groupId>
-      <artifactId>j2html</artifactId>
-      <version>0.7</version>
-    </dependency>
-    <dependency>
-      <groupId>com.despegar</groupId>
-      <artifactId>spark-test</artifactId>
-      <version>1.1.8</version>
-    </dependency>
-  </dependencies>
-
-  <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>exec-maven-plugin</artifactId>
-          <version>1.2.1</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
+  <modelVersion>4.0.0</modelVersion>  
+  <groupId>com.christinewang</groupId>  
+  <version>1.0-SNAPSHOT</version>  
+  <artifactId>voter-queue</artifactId>  
+  <name>voter-queue</name>  
+  <properties> 
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+    <maven.compiler.source>1.8</maven.compiler.source>  
+    <maven.compiler.target>1.8</maven.compiler.target> 
+  </properties>  
+  <dependencies> 
+    <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->  
+    <dependency> 
+      <groupId>com.google.zxing</groupId>  
+      <artifactId>core</artifactId>  
+      <version>3.4.0</version> 
+    </dependency>  
+    <!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->  
+    <dependency> 
+      <groupId>com.google.zxing</groupId>  
+      <artifactId>javase</artifactId>  
+      <version>3.4.0</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.slf4j</groupId>  
+      <artifactId>slf4j-simple</artifactId>  
+      <version>1.7.30</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>junit</groupId>  
+      <artifactId>junit</artifactId>  
+      <version>4.12</version>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.sparkjava</groupId>  
+      <artifactId>spark-core</artifactId>  
+      <version>[2.7.2,)</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.fasterxml.jackson.core</groupId>  
+      <artifactId>jackson-databind</artifactId>  
+      <version>[2.9.10.4,)</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.projectlombok</groupId>  
+      <artifactId>lombok</artifactId>  
+      <version>1.18.2</version>  
+      <scope>provided</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.sql2o</groupId>  
+      <artifactId>sql2o</artifactId>  
+      <version>1.5.4</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.postgresql</groupId>  
+      <artifactId>postgresql</artifactId>  
+      <version>9.4-1206-jdbc42</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.google.guava</groupId>  
+      <artifactId>guava</artifactId>  
+      <version>[24.1.1,)</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.easymock</groupId>  
+      <artifactId>easymock</artifactId>  
+      <version>3.4</version>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.google.code.gson</groupId>  
+      <artifactId>gson</artifactId>  
+      <version>2.5</version>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.beust</groupId>  
+      <artifactId>jcommander</artifactId>  
+      <version>1.48</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.j2html</groupId>  
+      <artifactId>j2html</artifactId>  
+      <version>0.7</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.despegar</groupId>  
+      <artifactId>spark-test</artifactId>  
+      <version>1.1.8</version> 
+    </dependency> 
+  </dependencies>  
+  <build> 
+    <pluginManagement> 
+      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->  
+      <plugins> 
+        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->  
+        <plugin> 
+          <artifactId>maven-clean-plugin</artifactId>  
+          <version>3.1.0</version> 
+        </plugin>  
+        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->  
+        <plugin> 
+          <artifactId>maven-resources-plugin</artifactId>  
+          <version>3.0.2</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-compiler-plugin</artifactId>  
+          <version>3.8.0</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-surefire-plugin</artifactId>  
+          <version>2.22.1</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-jar-plugin</artifactId>  
+          <version>3.0.2</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-install-plugin</artifactId>  
+          <version>2.5.2</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-deploy-plugin</artifactId>  
+          <version>2.8.2</version> 
+        </plugin>  
+        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->  
+        <plugin> 
+          <artifactId>maven-site-plugin</artifactId>  
+          <version>3.7.1</version> 
+        </plugin>  
+        <plugin> 
+          <artifactId>maven-project-info-reports-plugin</artifactId>  
+          <version>3.0.0</version> 
+        </plugin>  
+        <plugin> 
+          <groupId>org.codehaus.mojo</groupId>  
+          <artifactId>exec-maven-plugin</artifactId>  
+          <version>1.2.1</version> 
+        </plugin> 
+      </plugins> 
+    </pluginManagement>  
+    <plugins>
+      <plugin>
+        <groupId>com.microsoft.azure</groupId>
+        <artifactId>azure-webapp-maven-plugin</artifactId>
+        <version>1.8.0</version>
+        <configuration>
+          <schemaVersion>V2</schemaVersion>
+          <resourceGroup>voter-queue-rg</resourceGroup>
+          <appName>voter-queue</appName>
+          <pricingTier>P1v2</pricingTier>
+          <region>westeurope</region>
+          <runtime>
+            <os>linux</os>
+            <javaVersion>jre8</javaVersion>
+            <webContainer>jre8</webContainer>
+          </runtime>
+          <deployment>
+            <resources>
+              <resource>
+                <directory>${project.basedir}/target</directory>
+                <includes>
+                  <include>*.jar</include>
+                </includes>
+              </resource>
+            </resources>
+          </deployment>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build> 
 </project>
