--- a/pom.xml
+++ b/pom.xml
@@ -101,8 +101,9 @@
       <version>1.1.8</version> 
     </dependency> 
   </dependencies>
+
   <build>
-    <pluginManagement> 
+    <pluginManagement>
       <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -116,6 +117,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.1.0</version>
           <configuration>
             <descriptorRefs>
               <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -128,26 +130,13 @@
           </configuration>
           <executions>
             <execution>
-              <id>make-assembly</id> <!-- this is used for inheritance merges -->
-              <phase>package</phase> <!-- bind to the packaging phase -->
+              <id>make-assembly</id>
+              <phase>package</phase>
               <goals>
                 <goal>single</goal>
               </goals>
             </execution>
           </executions>
-        </plugin>
-        <plugin>
-          <groupId>com.heroku.sdk</groupId>
-          <artifactId>heroku-maven-plugin</artifactId>
-          <version>1.1.3</version>
-          <configuration>
-            <jdkVersion>1.8</jdkVersion>
-            <appName>voter-queue</appName>
-            <processTypes>
-              <!-- Tell Heroku how to launch your application -->
-              <web>java -jar ./target/voter-queue-1.0-SNAPSHOT-jar-with-dependencies.jar</web>
-            </processTypes>
-          </configuration>
         </plugin>
       </plugins> 
     </pluginManagement>
