--- a/pom.xml
+++ b/pom.xml
@@ -94,12 +94,12 @@
       <groupId>com.j2html</groupId>  
       <artifactId>j2html</artifactId>  
       <version>0.7</version> 
-    </dependency>  
-    <dependency> 
-      <groupId>com.despegar</groupId>  
-      <artifactId>spark-test</artifactId>  
-      <version>1.1.8</version> 
-    </dependency> 
+    </dependency>
+    <dependency>
+      <groupId>org.webjars.npm</groupId>
+      <artifactId>vue</artifactId>
+      <version>2.6.10</version>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement> 
