--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,8 @@ log4j.rootLogger=INFO, fileAppender, theConsoleAppender
 # settings for the console appender
 log4j.appender.theConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.theConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.theConsoleAppender.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
+#Note the ANSI red text, because I wanted the console log to be red, like it was earlier.
+log4j.appender.theConsoleAppender.layout.ConversionPattern=\u001b[31m [%t] %-5p %c %x - %m%n \u001b[0m
 
 # settings for file appender
 log4j.appender.fileAppender=org.apache.log4j.RollingFileAppender
@@ -12,4 +13,4 @@ log4j.appender.fileAppender.File=LogFile.txt
 log4j.appender.fileAppender.MaxFileSize=100MB
 log4j.appender.fileAppender.MaxBackupIndex=10
 log4j.appender.fileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.fileAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c %x - %m%n
+log4j.appender.fileAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p %c %x - %m%n
