--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,7 +5,8 @@ log4j.rootLogger=INFO, fileAppender, theConsoleAppender
 log4j.appender.theConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.theConsoleAppender.layout=org.apache.log4j.PatternLayout
 #Note the ANSI red text, because I wanted the console log to be red, like it was earlier.
-log4j.appender.theConsoleAppender.layout.ConversionPattern=\u001b[31m [%t] %-5p %c %x - %m%n \u001b[0m
+#This is: red{[thread] priority(INFO, ERROR, etc) class - message newline}
+log4j.appender.theConsoleAppender.layout.ConversionPattern=\u001b[31m [%t] %-5p %c - %m%n \u001b[0m
 
 # settings for file appender
 log4j.appender.fileAppender=org.apache.log4j.RollingFileAppender
@@ -13,4 +14,5 @@ log4j.appender.fileAppender.File=LogFile.txt
 log4j.appender.fileAppender.MaxFileSize=100MB
 log4j.appender.fileAppender.MaxBackupIndex=10
 log4j.appender.fileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.fileAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p %c %x - %m%n
+# This is: date time [thread] priority(INFO, ERROR, etc) class - message newline
+log4j.appender.fileAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p %c - %m%n
