Added encrypted admin page. Removed file logging. Added csv db logging functions and framework, but call functions anywhere. Fixed csv_log db table. Added option to reset precinct_names in admin panel. Changed db functions, so that they ignore votes/completevotes from before the latest precinct name reset. Added JOIN statements so that the vue will receive the precinct names in the JSON VoteCompleteModels.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,10 +9,10 @@ log4j.appender.theConsoleAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.theConsoleAppender.layout.ConversionPattern=\u001b[31m [%t] %-5p %c - %m%n \u001b[0m
 
 # settings for file appender
-log4j.appender.fileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.fileAppender.File=LogFile.txt
-log4j.appender.fileAppender.MaxFileSize=100MB
-log4j.appender.fileAppender.MaxBackupIndex=10
-log4j.appender.fileAppender.layout=org.apache.log4j.PatternLayout
+#log4j.appender.fileAppender=org.apache.log4j.RollingFileAppender
+#log4j.appender.fileAppender.File=LogFile.txt
+#log4j.appender.fileAppender.MaxFileSize=100MB
+#log4j.appender.fileAppender.MaxBackupIndex=10
+#log4j.appender.fileAppender.layout=org.apache.log4j.PatternLayout
 # This is: date time [thread] priority(INFO, ERROR, etc) class - message newline
-log4j.appender.fileAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p %c - %m%n
+#log4j.appender.fileAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p %c - %m%n
