--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client -->
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client</artifactId>
+      <version>1.31.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <pluginManagement>
