--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,12 @@
       <artifactId>google-oauth-client</artifactId>
       <version>1.31.0</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.30.10</version>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
